# MinimalCadQuery

./: README.md  issues.txt  pyproject.toml
src/minimalcadquery/: __init__.py  assembly.py  cq.py  selectors.py  types.py  vis.py
src/minimalcadquery/occ_impl/: geom.py  shape_protocols.py  shapes.py
src/minimalcadquery/occ_impl/exporters/: __init__.py
src/minimalcadquery/occ_impl/importers/: __init__.py
tests/: AxisConstraints.py  MinimalAxisConstraints.py  MinimalTest.py  assy-1.py  assy.py  box.step  find_calling.py  rectBasedObject.step  test.py  tmp.txt
