[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimalcadquery"
version = "0.1.16"
authors = [
  { name="Simon Huskier", email="huskier@gmail.com" },
]
description = "A minimal cadquery package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cadquery-ocp==7.7.2", "typing_extensions"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"